--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -82,26 +83,51 @@ body {
   cursor: pointer;
 }
 
+.label:hover {
+  background: linear-gradient(90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+}
+
 .ball {
   background: hsl(230, 17%, 14%);
   position: absolute;
-  top: 2px;
-  left: 4px;
+  top: 2.5px;
+  left: 3px;
   border-radius: 50%;
   width: 18px;
   height: 18px;
   transition: transform 0.15s linear;
 }
 
-.checkbox:checked + .label .ball {
-  transform: translateX(24px);
+.checkbox:checked+.label .ball {
+  transform: translateX(26px);
   background: hsl(0, 0%, 100%);
 }
 
-.checkbox:checked + .label {
+.checkbox:checked+.label {
   background: hsl(230, 22%, 74%);
 }
 
-:root {
+.checkbox:checked+.label:hover {
+  background: linear-gradient(90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+}
 
+.instagram {
+  background: rgb(253, 196, 104);
+  background: linear-gradient(90deg, rgba(253, 196, 104, 1) 0%, rgba(223, 73, 150, 1) 100%);
+  border-radius: 8px 8px 0 0;
+}
+
+.facebook {
+  background: hsl(208, 92%, 53%);
+  border-radius: 8px 8px 0 0;
+}
+
+.twitter {
+  background: hsl(203, 89%, 53%);
+  border-radius: 8px 8px 0 0;
+}
+
+.youtube {
+  background: hsl(348, 97%, 39%);
+  border-radius: 8px 8px 0 0;
 }
